[package]
name = "r_html_to_json"
version = "1.0.0"
authors = ["itolog"]
edition = "2018"
repository = "https://github.com/itolog/r_html_to_json"
keywords = ["html_to_json", "html_to_json_wasm"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = { version = "0.2.88", features = ["serde-serialize"] }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
scraper = { version = "0.19.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = { version = "0.6.5" }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = { version = "0.4.38" }
js-sys = "0.3.69"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true

[dependencies.web-sys]
version = "0.3"
features = []

